2003-08-29  Mark Mitchell  <mark@codesourcery.com>

	* GNUmakefile.in (check): Remove dependency on check-rsh.

	* README: Mention Win32 extensions and update reference to ZPL.
	* qm/external/DocumentTemplate/LICENSE.txt: New file.
	
2003-08-28  Stefan Seefeld  <stefan.seefeld@orthosoft.ca>

	* setup.py: Make documentation compliant with qmtest's standard.
	(qm_build_doc): Tidy up the code and make it more clear.
	(qm_build_doc): Use os.path.join and os.path.normpath for better
	portability.

2003-08-27  Stefan Seefeld  <seefeld@sympatico.ca>

	* setup.py: Add build_doc command.

2003-08-27  Stefan Seefeld  <seefeld@sympatico.ca>

	* setup.py: New file.
	* qm/__init__.py: Import qm.config for data path and version info.
	* qm/test/base.py: Add config.data_dir + '/test/classes' to search
	path.
	* qm/test/qmtest.py: Insert magic number so this becomes a real script.

2003-08-27  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/web/web.py (LoadContextPage.prompt): Fix quoting.

2003-08-20  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/cmdline.py (QMTest.__ExecuteCreate): Return 2 for
	failure, not 1.
	(QMTest.__ExecuteCreateTdb): Likewise.
	(QMTest.__ExecuteCreateTarget): Likewise.
	(QMTest.__ExecuteExtensions): Likewise.
	(QMTest.__ExecuteRegister): Likewise.
	(QMTest.__ExecuteSummarize): Return 2 when a test fails, not 1.
	(QMTest.__ExecuteRun): Likewise.
	* qm/test/qmtest.py: Use 2 as the default exit code, not 1.
	* qm/test/doc/reference.xml: Update accordingly.

	* NEWS: Mention documentation of exit status.
	* qm/test/cmdline.py (QMTest.Execute): Use the return value from
	__ExecuteCreateTdb.
	(QMTest.__ExecuteCreate): Return a value explicitly.
	(QMTest.__ExecuteCreateTdb): Likewise.
	(QMTest.__ExecuteCreateTarget): Likewise.
	(QMTest.__ExecuteSummarize): Likewise.
	(QMTest.__ExecuteRun): Likewise.
	* qm/test/qmtest.py: Simplify handling of exit codes.
	* qm/test/classes/mount_database.py: Fix typo in doc-string.